fixed mobile menu overflowing page

--- a/src/components/GameBoard/index.css
+++ b/src/components/GameBoard/index.css
@@ -121,3 +121,9 @@
 .square-light {
     background-color: #efd8b5;
 }
+
+@media screen and (max-width: 600px) {
+    .pending-game-text-container {
+        width: 95%;
+    }
+}
