--- a/src/components/PlayersAside/index.css
+++ b/src/components/PlayersAside/index.css
@@ -6,11 +6,8 @@
     color: white;
 }
 
-.player-aside-container {
-    padding: 4%;
-    position: relative;
-    height: 100%;
-    background-color: #b58863;
+.mobile-menu-exit {
+    display: none;
 }
 
 .player-btns {
@@ -75,4 +72,20 @@
     position: relative;
     left: 5px;
     padding: 2px 10px;
+}
+
+@media screen and (max-width: 1300px) {
+    /* show 'x' to close menu on smaller devices */
+    .mobile-menu-exit {
+        display: inline;
+        position: absolute;
+        top: -10px;
+        right: 10px;
+        font-size: 40px;
+        color: white;
+    }
+
+    .mobile-menu-exit:hover {
+        cursor: pointer;
+    }
 }
