--- a/src/pages/GameRoom/index.css
+++ b/src/pages/GameRoom/index.css
@@ -6,7 +6,11 @@
 .game-aside-content {
     position: relative;
     width: 400px;
-    height: 100vh;
+    height: calc(100vh - 76px);
+    transition: right 1s;
+    background-color: #b58863;
+    padding: 1%;
+    padding-top: 20px;
 }
 
 .game-main-content {
@@ -15,16 +19,37 @@
 
 /* at 1300px move aside containing player info to above board */
 @media screen and (max-width: 1300px) {
+    body {
+        background-color: #343a40;
+    }
+    
     .content-wrapper {
         flex-direction: column-reverse;
     }
 
     .game-aside-content {
-        width: 100%;
-        height: 500px;
+        position: fixed;
+        top: 0;
+        height: 100vh;
+        right: -400px;
+        z-index: 300000;
+        transition: right 1s;
+    }
+
+    .game-aside-content.show {
+        right: 0;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, .3)
     }
 
     .game-main-content {
         width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+    .game-aside-content {
+        width: 100%;
+        right: -100%;
     }
 }
